--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@
   --clr-selection-bg: rgba(159, 44, 72, 0.667);
   --clr-selection-text: rgba(162, 148, 179, 0.667);
   --clr-background: #0d1b2aff;
+  --clr-green: #00f5d4;
 }
 
 html {
