--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Open+Sans:wght@400;500;600&display=swap');
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --font-family: 'Open Sans', sans-serif;
-  --clr-light: #f0e9e9;
-  --clr-rich-black: #0d1b2aff;
-  --clr-oxford-blue: #1b263bff;
-  --clr-yinmn-blue: #415a77ff;
-  --clr-silver-lake-blue: #778da9ff;
-  --clr-platinum: #e0e1ddff;
-  --clr-selection-bg: rgba(159, 44, 72, 0.667);
-  --clr-selection-text: rgba(162, 148, 179, 0.667);
-  --clr-background: #0d1b2aff;
-  --clr-green: #00f5d4;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-html {
-  scroll-behavior: smooth;
-  font-family: var(--font-family);
-  background: var(--clr-background);
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-::selection {
-  background: var(--clr-selection-bg);
-  color: var(--clr-selection-text);
+* {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+h1,
+h2,
+p,
+ul {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  font-weight: bold;
 }
