--- a/styles/index.css
+++ b/styles/index.css
@@ -67,6 +67,10 @@ a:hover {
 }
 
 .app-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   background-color: #000000;
   padding: 1rem;
   text-align: center;
