--- a/styles/index.css
+++ b/styles/index.css
@@ -121,6 +121,7 @@ nav ul li p:hover {
 
 .about-me-container {
   display: flex;
+  position: fixed;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
